Improve vers operations performance (#320)
Improves performance of `parse`, `validate`, and `simplify`, by getting rid of unnecessary allocations from `PairwiseIterator`, `Stream` usage, and repeated creation of `Set`s using `Set.of(...)`.

Since these operations are literally the library's main surface, and often in the hot path of its consumers, they should have as little overhead as possible.

Signed-off-by: nscuro <nscuro@protonmail.com>